add: 管理画面のスタイル調整

--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -1,1 +1,23 @@
+.field {
+  &_title {
+    font-size: 1.2rem;
+    font-weight: bold;
+  }
 
+  &_wrap {
+    width: 90%;
+
+    input[type="text"] {
+      width: 100%;
+    }
+
+    textarea {
+      height: 10rem;
+      width: 100%;
+    }
+  }
+
+  &_image {
+    margin-bottom: 1rem;
+  }
+}
