--- a/assets/src/scss/layout.scss
+++ b/assets/src/scss/layout.scss
@@ -31,17 +31,22 @@ img {
   width: 100%;
 }
 
+main {
+  width: 900px !important;
+}
+
 .header {
   background: #003c78;
   color: #fff;
-  font-size: 30px;
-  padding: 1rem 0;
+  font-size: 17px;
+  padding: 10px 0;
   text-align: center;
 }
 
 
 .content {
   &Top {
+    height: 400px;
     position: relative;
   }
 }
@@ -64,14 +69,15 @@ img {
   &_sub {
     background: #003c78;
     display: inline-block;
-    font-size: 30px;
-    padding: 0.8rem;
+    font-size: 17px;
+    padding: 8px;
   }
 
   &_main {
-    font-size: 70px;
-    line-height: 1;
+    font-size: 40px;
+    line-height: 1.4;
     padding: 10px;
+    text-shadow: 2px 3px 8px rgba(0, 0, 0, 0.8);
   }
 
   &_notice {
@@ -79,18 +85,18 @@ img {
     border-radius: 50%;
     color: #fff;
     display: table-cell;
-    font-size: 3rem;
-    line-height: 3rem;
+    font-size: 30px;
+    line-height: 30px;
     text-align: center;
     vertical-align: middle;
 
     &Wrap {
-      bottom: 1rem;
+      bottom: 10px;
       display: table;
-      height: 15rem;
+      height: 150px;
       position: absolute;
-      right: 1rem;
-      width: 15rem;
+      right: 10px;
+      width: 150px;
       z-index: 2;
     }
   }
@@ -105,37 +111,55 @@ img {
   &Table {
     font-size: 20px;
     margin: 0 auto;
-    width: 80%;
+    width: 87%;
 
     tr {
-      padding-bottom: 10px;
+      padding-bottom: 12px;
     }
 
     th {
       color: #fff;
-      padding: 0 10px 15px 0 ;
+      font-size: 18px;
+      padding-right: 10px;
       text-align: center;
       width: 10%;
 
       span {
         background: #003c78;
         border-radius: 30px;
-        padding: 5px;
+        display: block;
       }
     }
 
     td {
       border: 0;
       color: #000;
+      display: inline-block;
+      font-size: 30px;
+      font-weight: bold;
+      vertical-align: middle;
 
       &.long {
-        width: 60%;
-      }
-
-      &.short {
-        width: 20%;
+        width: 95%;
       }
     }
+  }
+
+  &Week {
+    background: #000;
+    color: #fff;
+    font-size: 20px;
+    margin: 0 10px 0 5px;
+    padding: 2px;
+  }
+
+  &Time {
+    font-size: 25px;
+  }
+
+  &Unit {
+    font-size: 18px;
+    margin-left: 5px;
   }
 }
 
@@ -148,72 +172,82 @@ img {
   &Title {
     background: #003c78;
     color: #fff;
-    font-size: 20px;
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 15px;
     padding: 5px 0;
     text-align: center;
   }
 
   &Table {
     border: 0;
-    margin-top: 0.5rem;
     width: 100%;
 
     div {
       font-size: 0;
-      margin-bottom: 0.5rem;
+      margin-bottom: 10px;
     }
 
     p {
       background: #016fb9;
       border: 0;
       box-sizing: border-box;
-      clip-path: polygon(0 0, calc(100% - 10px) 0, 100% 10px, 100% 100%, 10px 100%, 0% calc(100% - 10px));
+      // clip-path: polygon(0 0, calc(100% - 10px) 0, 100% 10px, 100% 100%, 10px 100%, 0% calc(100% - 10px));
       color: #fff;
       display: inline-block;
-      font-size: 1.4rem;
+      font-size: 15px;
       padding: 10px 5px;
-      width: 49.7%;
+      width: 49.5%;
 
       &::before {
         background: #000;
         content: "";
         display: inline-block;
-        height: 1.5rem;
+        height: 15px;
         margin-right: 5px;
         vertical-align: middle;
-        width: 1.5rem;
+        width: 15px;
       }
 
       &:first-of-type {
-        margin-right: 0.5rem;
+        margin-right: 1%;
       }
     }
   }
 }
 
 .message {
-  padding-bottom: 0.5rem;
+  font-size: 15px;
+  padding-bottom: 5px;
 }
 
 .application {
   background: #00f;
   font-size: 0;
-  padding: 0.5rem 2rem;
+  padding: 10px 20px;
 
-  &TextWrap {
-    color: #fff;
-    display: inline-block;
-    font-size: 1.4rem;
-    text-align: center;
-    vertical-align: middle;
-    width: 90%;
+  &Text {
+    font-size: 22px;
+
+    &Wrap {
+      color: #fff;
+      display: inline-block;
+      font-size: 14px;
+      text-align: center;
+      vertical-align: middle;
+      width: 90%;
+    }
+  }
+
+  &Url {
+    font-size: 20px;
   }
 
   &Arrow {
     color: #fff;
     display: inline-block;
-    font-size: 1.4rem;
-    height: 2rem;
+    font-size: 14px;
+    height: 20px;
     vertical-align: middle;
     width: 3%;
   }
@@ -228,7 +262,7 @@ img {
 .profile {
   &Wrap {
     background: #808080;
-    padding: 1rem;
+    padding: 10px;
   }
 
   &Img {
@@ -236,50 +270,68 @@ img {
   }
 
   &Detail {
-    padding: 1rem;
+    padding: 10px;
     vertical-align: top;
     width: 85%;
 
     &Head {
       border-bottom: 1px solid #003c78;
       color: #003c78;
-      font-size: 1.5rem;
+      font-size: 25px;
       line-height: 1;
-      padding-bottom: 0.5rem;
+      padding-bottom: 5px;
     }
   }
 
+  &Title {
+    display: inline-block;
+    vertical-align: middle;
+  }
+
   &Name {
-    font-size: 2.5rem;
+    display: inline-block;
+    font-size: 40px;
+    vertical-align: middle;
   }
 
   &Text {
-    padding: 0.5rem 0;
+    font-size: 20px;
+    padding: 5px 0;
+    text-align: justify;
   }
 }
 
 .contact {
-  background: #00f;
+  background: #000;
   color: #fff;
-  padding: 1rem;
+  padding: 10px;
 
   &Wrap {
+    font-size: 20px;
     width: 100%;
   }
 
   &Title {
-    width: 7%;
+    background: #003c78;
+    border-radius: 30px;
+    font-size: 15px;
+    vertical-align: middle;
+    width: 10%;
   }
 
   &Company {
-    width: 18%;
+    font-weight: bold;
+    padding-left: 10px;
+    width: 30%;
   }
 
   &Tel {
-    width: 35%;
+    font-weight: bold;
+    width: 30%;
   }
 
   &Email {
-    width: 40%;
+    font-weight: bold;
+    width: 30%;
   }
 }
