--- a/assets/src/scss/layout.scss
+++ b/assets/src/scss/layout.scss
@@ -231,6 +231,7 @@ main {
 .message {
   padding-bottom: 5px;
   font-size: 15px;
+  resize: none;
 }
 
 .application {
@@ -349,8 +350,12 @@ main {
 }
 
 .opap__wrap {
+  max-width: 700px;
+  margin: 0 auto;
+
   p {
     margin-top: 10px;
+    margin-bottom: 0 !important;
     font-size: 16px;
   }
 
@@ -358,8 +363,9 @@ main {
   input[type="tel"],
   input[type="email"],
   textarea {
-    flex-grow: 1;
-    width: 80%;
+    // flex-grow: 1;
+    box-sizing: border-box;
+    width: 100%;
     padding: 10px;
     font-size: 16px;
     color: #333;
@@ -371,6 +377,7 @@ main {
   input[type="number"],
   input[type="date"],
   input[type="time"] {
+    box-sizing: border-box;
     flex-grow: 1;
     padding: 10px;
     font-size: 16px;
@@ -381,20 +388,218 @@ main {
   }
 }
 
-.qr_preview,
-.profile_preview {
-  margin-top: 5px;
+.title_wrap {
+  margin-top: 10px;
+}
 
-  img {
-    width: 200px;
-    height: auto;
+.bg {
+  &_img_wrap {
+    position: relative;
+    padding: 30px 0 60px;
+    overflow: hidden;
+  }
+
+  &_preview {
+    position: absolute;
+    top: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+
+    img {
+      height: 100%;
+      object-fit: cover;
+    }
   }
 }
 
+.sub_wrap {
+  // margin-top: 30px;
+}
+
+.main_wrap {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+.date_wrap {
+  display: grid;
+  grid-template-rows: 50px 50px;
+  grid-template-columns: 80px 1fr 1fr 10px 1fr 80px 1fr;
+  row-gap: 10px;
+  column-gap: 3px;
+  align-items: center;
+  margin-top: 10px;
+
+  p {
+    margin-top: 0;
+  }
+}
+
+input[type="text"].detail_item_place {
+  grid-column: 2 / 6;
+}
+
+input[type="number"] {
+  &.detail_item_capacity,
+  &.detail_item_price {
+    width: 100%;
+  }
+}
+
+input[type="text"].title {
+  width: 100%;
+}
+
+input[type="text"].sub_catch {
+  width: 85%;
+}
+
+textarea.main_catch {
+  width: 45%;
+  resize: none;
+}
+
+textarea.notice_text {
+  position: absolute;
+  right: 0;
+  bottom: 10px;
+  width: 20%;
+  text-align: center;
+  resize: none;
+}
+
+.list {
+  &_title {
+    color: #fff !important;
+    text-align: center;
+    background-color: #003c78 !important;
+    border-radius: 0 !important;
+
+    &::placeholder {
+      color: #e1e1e1;
+    }
+  }
+
+  &_wrap {
+    box-sizing: border-box;
+    margin-top: 20px;
+    border: 4px solid #003c78;
+
+    input[type="text"] {
+      margin-bottom: 10px;
+    }
+  }
+
+  &_text_wrap {
+    padding: 10px;
+  }
+}
+
+.message {
+  margin-top: 10px;
+}
+
+.seminar {
+  &_wrap {
+    display: grid;
+    grid-template-rows: 45px 45px 1fr;
+    grid-template-columns: 80% 20%;
+    row-gap: 5px;
+    padding: 13px 20px;
+    margin: 10px 0;
+    background: #00f;
+
+    input[type="text"] {
+      text-align: center;
+      border-radius: 0;
+    }
+  }
+
+  &_text {
+    margin-top: 10px;
+  }
+
+  &_url {
+    margin-bottom: 10px;
+  }
+}
+
+.qr {
+  &_wrap {
+    box-sizing: border-box;
+    grid-row: 1 / 5;
+    grid-column: 2 / 3;
+    padding: 0 5px;
+
+    p {
+      margin-top: 0;
+    }
+  }
+
+  &_title {
+    color: #fff;
+  }
+
+  &_btn_wrap {
+    display: flex;
+
+    button {
+      font-size: 11px;
+    }
+  }
+}
+
+.profile {
+  &_wrap {
+    display: flex;
+    gap: 10px;
+    align-items: flex-end;
+    margin-bottom: 10px;
+  }
+
+  &_image_wrap {
+    width: 150px;
+
+    button {
+      font-size: 11px;
+    }
+  }
+
+  &_preview {
+    margin-top: 5px;
+
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
+
+  &_detail_wrap {
+    input[type="text"] {
+      width: 45%;
+    }
+  }
+
+  &_text {
+    margin-top: 10px;
+    resize: none;
+  }
+}
+
+.bg_image_delete,
 .qr_image_delete,
 .profile_image_delete {
   display: none;
   margin-left: 10px;
+}
+
+.contact {
+  &_wrap {
+    display: flex;
+    gap: 10px;
+  }
 }
 
 .opap {
@@ -417,8 +622,7 @@ main {
 }
 
 .label_notice {
-  display: inline-block;
-  margin-left: 10px;
+  display: block;
   font-size: 12px;
   color: #f00;
 }
